Added npm i path.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "dependencies": {
     "inquirer": "^7.0.4",
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
